--- a/EuroSim/.classpath
+++ b/EuroSim/.classpath
@@ -8,7 +8,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src/main/resources"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="lib" path="C:/Program Files/eclipseSARL/io.janusproject.kernel-2.1.0.0-20150515.032057-40-with-dependencies.jar"/>
+	<classpathentry kind="con" path="io.sarl.eclipse.launching.SARL_SUPPORT"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
